policies/validate-resource-quota.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: require-requests-limits
  namespace: bikkfabian
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-resources
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "CPU and memory requests and limits must be set for all containers."
        foreach:
          - list: "request.object.spec.containers[]"
            pattern:
              resources:
                requests:
                  cpu: "?*"
                  memory: "?*"
                limits:
                  cpu: "?*"
                  memory: "?*"
          - list: "request.object.spec.initContainers[]"
            pattern:
              resources:
                requests:
                  cpu: "?*"
                  memory: "?*"
                limits:
                  cpu: "?*"
                  memory: "?*"
          - list: "request.object.spec.ephemeralContainers[]"
            pattern:
              resources:
                requests:
                  cpu: "?*"
                  memory: "?*"
                limits:
                  cpu: "?*"
                  memory: "?*"
