tests/resource-quota/pod-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-fail-no-requests
  namespace: bikkfabian
spec:
  containers:
  - name: container-fail-no-requests
    image: images.my-company.example/app:v4
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-fail-no-limits
  namespace: bikkfabian
spec:
  containers:
  - name: container-fail-no-limits
    image: images.my-company.example/app:v4
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
