tests/resource-quota/pod-success.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-success
  namespace: bikkfabian
spec:
  containers:
  - name: container-success
    image: images.my-company.example/app:v4
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
