tests/resource-quota/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-resource-quotas
policies:
  - ../../policies/validate-resource-quota.yaml
resources:
  - pod-success.yaml
  - pod-fail.yaml
results:
  - policy: bikkfabian/require-requests-limits
    rule: validate-resources
    resources: 
      - bikkfabian/pod-success
    kind: Pod
    result: pass
  
  - policy: bikkfabian/require-requests-limits
    rule: validate-resources
    resources:
      - bikkfabian/pod-fail-no-requests
    kind: Pod
    result: fail
  
  - policy: bikkfabian/require-requests-limits
    rule: validate-resources
    resources:
      - bikkfabian/pod-fail-no-limits
    kind: Pod
    result: fail
